Make sure header nav doesn't overlap page title

--- a/public/style.css
+++ b/public/style.css
@@ -26,6 +26,7 @@
 }
 
 #BodyContainer .no-hero-image #co_content_container .master-content-wrapper.master-content-wrapper {
+  grid-row: 1/3;
   background-color: #12b0d1 !important;
 }
 
@@ -109,7 +110,7 @@ html:not(:has(link#k[href*=sites6], link#k[href*=template5])) .article_index img
   text-wrap: pretty;
 }
 
-#chabad_main_content :has(.chabad_image_banner, img[src$="White-wavy-bottom-border.png"], #co_body_container, footer),
+#chabad_main_content :has(.chabad_image_banner, img[src$="White-wavy-bottom-border.png"], #co_body_container, header.article-header, footer),
 #chabad_main_content footer {
   display: grid;
   grid-template-rows: subgrid;
@@ -125,6 +126,16 @@ html:not(:has(link#k[href*=sites6], link#k[href*=template5])) .article_index img
   z-index: 1;
   grid-column: content;
   grid-row: 1;
+}
+
+.master-content-wrapper {
+  grid-column: full-width;
+  grid-row: 1/3;
+}
+
+header.article-header {
+  grid-row: 2;
+  grid-column: content;
 }
 
 #chabad_left_colum > :nth-child(1),
